<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textViewNovoCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/novo_cadastro"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewFabricante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/fabricante"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNovoCadastro" />

        <Spinner
            android:id="@+id/spinnerFabricantes"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:entries="@array/fabricantes"
            android:spinnerMode="dialog"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewFabricante" />

        <TextView
            android:id="@+id/textViewMarca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/marca"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerFabricantes" />

        <Spinner
            android:id="@+id/spinnerMarcas"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:entries="@array/marcas"
            android:spinnerMode="dialog"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewMarca" />

        <TextView
            android:id="@+id/textViewModelos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/modelo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerMarcas" />

        <Spinner
            android:id="@+id/spinnerModelos"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:spinnerMode="dialog"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewModelos" />

        <TextView
            android:id="@+id/textViewSerie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/serie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerCores" />

        <EditText
            android:id="@+id/editTextSerie"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/hint_serie"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSerie" />

        <TextView
            android:id="@+id/textViewCor"
            android:layout_width="22dp"
            android:layout_height="19dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/cor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerModelos" />

        <Spinner
            android:id="@+id/spinnerCores"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:entries="@array/cores"
            android:spinnerMode="dialog"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCor" />

        <RadioGroup
            android:id="@+id/radioGroupRaridade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:addStatesFromChildren="false"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextObs">

            <RadioButton
                android:id="@+id/radioButtonComum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comum" />

            <RadioButton
                android:id="@+id/radioButtonRaro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/raro" />

            <RadioButton
                android:id="@+id/radioButtonThunt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thunt" />
        </RadioGroup>

        <Button
            android:id="@+id/buttonConfirmar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:onClick="salvar"
            android:text="@string/salvar"
            app:layout_constraintStart_toStartOf="@+id/radioGroupRaridade"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupRaridade" />

        <Button
            android:id="@+id/buttonLimpar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:onClick="limparCampos"
            android:text="@string/limpar"
            app:layout_constraintEnd_toEndOf="@+id/radioGroupRaridade"
            app:layout_constraintStart_toEndOf="@+id/buttonConfirmar"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupRaridade" />

        <CheckBox
            android:id="@+id/cbLoose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/loose"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editTextSerie"
            app:layout_constraintTop_toBottomOf="@+id/textViewSerie" />

        <TextView
            android:id="@+id/textViewAno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/ano"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextSerie" />

        <EditText
            android:id="@+id/editTextAno"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/hint_ano"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewAno" />

        <TextView
            android:id="@+id/textViewNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/nome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextAno" />

        <EditText
            android:id="@+id/editTextNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/nome"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNome" />

        <TextView
            android:id="@+id/textViewObs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/obs"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNome" />

        <EditText
            android:id="@+id/editTextObs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/obs"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewObs" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
